"책장페이지 책 리스트 담기 컨트롤러까지 완료"

--- a/src/main/resources/static/css/mypage/myPageBookContainer.css
+++ b/src/main/resources/static/css/mypage/myPageBookContainer.css
@@ -285,7 +285,7 @@ footer {
 }
 
 .x-box {
-  background-image: url("../myPageImg/cancel.png");
+  background-image: url("/images/mypage/cancel.png");
   width: 15px;
   height: 15px;
   background-size: contain;
@@ -304,7 +304,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 6px;
 }
 
 .book-container-modal-list-btn input {
