--- a/src/main/resources/templates/administrator/admin_user.html
+++ b/src/main/resources/templates/administrator/admin_user.html
@@ -170,7 +170,7 @@
                 <div><h4>회원 목록</h4></div>
                 <div class="main__result-box-container">
                   <div class="main__list-rownum-box">
-                    <p>[검색결과 0건]</p>
+                    <p>[검색결과 <span th:text="${page.total}"></span>건]</p>
                     <input class="select-input" type="hidden" th:value="${selectUserAdminDto}">
                     <select name="amount" class="main__rownum-select" th:data-rownum="${page.criteria.amount}">
                       <option value=10 th:selected="${page.criteria.amount == 10}">10개씩 보기</option>
