--- a/src/main/resources/static/css/feed/onelinepage.css
+++ b/src/main/resources/static/css/feed/onelinepage.css
@@ -290,14 +290,13 @@ a{
     list-style: none;
 }
 
-.sub_list > li > a{
+.sub_list > li > button{
     font-size: 14px;
     color: #242424;
     padding: 6px 16px;
     border-radius: 100px;
     background-color: #f7f7f7;
     cursor: pointer;
-    border: 1px solid black;
 }
 
 .feed_contentbox{
@@ -392,13 +391,17 @@ a{
 }
 
 .feed_cardimg{
+    display: flex;
     width: 100%;
     height: 290px;
+    align-items: center;
+    justify-content: center;
 }
 
-.feed_cardimg > img{
+.feed_cardimg > div{
+    text-align: center;
     width: 288px;
-    height: 220px;
+    height: 100px;
     margin: 10px 20px;
 }
 
