--- a/src/main/resources/templates/feed/feedpage.html
+++ b/src/main/resources/templates/feed/feedpage.html
@@ -8,23 +8,7 @@
     <script defer th:src="@{/js/feed/feed_modal.js}"></script>
 </head>
 <body>
-    <section class="modal_section">
-        <div class="modal_sheet">
-            <div class="modal">
-                <ul class="modal_ul">
-                    <a href="">
-                    <li>포스트 쓰기</li>
-                    </a>
-                    <a href="">
-                    <li>독서록 쓰기</li>
-                    </a>
-                    <a href="">
-                    <li>한 줄 리뷰</li>
-                    </a>
-                </ul>
-            </div>
-        </div>
-    </section>
+
     <header>
         <div class="header_layout">
             <h1 class="header_logo">
@@ -90,7 +74,7 @@
                     </li>
                 </ul>
                 <button class="feed_writer"> <!-- 클릭하면 글쓰기 종류 선택하는 팝업이 뿌려진다.-->
-                    <img src="/images/writer.png" alt=""> 
+                    <img th:src="@{/images/feed/writer.png}" alt="">
                 </button>
             </div>
         </div>
@@ -116,6 +100,22 @@
     </main>
 
     <section class="feed_contentbox">
+
+        <section class="modal_section">
+            <div class="modal">
+                <ul class="modal_ul">
+                    <a href="">
+                        <li>포스트 쓰기</li>
+                    </a>
+                    <a href="">
+                        <li>독서록 쓰기</li>
+                    </a>
+                    <a href="">
+                        <li>한 줄 리뷰</li>
+                    </a>
+                </ul>
+            </div>
+        </section>
         <div class="feed_contentlayer">
 
             <div class="feed_cardbox" th:each="card : ${feedList}">
