"책장 삭제 컨트롤러가지 완료" "html 타임리프 해야함"

--- a/src/main/resources/templates/mypage/myPageBookContainer.html
+++ b/src/main/resources/templates/mypage/myPageBookContainer.html
@@ -162,13 +162,33 @@
                     <input type="button" value="목록에서 삭제" class="book-list-delete">
                 </div>
                 <div class="book-container-modal-list-btn">
-                    <input type="button" value="책 상태 설정" class="best-book">
+                    <input type="button" value="책 상태 설정" class="book-status-set">
                 </div>
             </form>
         </div>
 
     </section>
+    <section class="book-container-modal-bg2">
+        <div>
 
+            <form action="" class="book-container-modal-list">
+                <div class="x-box">
+                    <img src="" alt="">
+                </div>
+                <div class="book-container-modal-list-btn">
+                    <input type="button" value="읽음" class="best-book">
+                </div>
+                <div class="book-container-modal-list-btn">
+                    <input type="button" value="읽는 중" class="book-info-detail">
+                </div>
+                <div class="book-container-modal-list-btn">
+                    <input type="button" value="안읽음" class="book-list-delete">
+                </div>
+
+            </form>
+        </div>
+
+    </section>
 
 </body>
 </html>
