--- a/src/main/resources/static/css/mypage/myPageBookContainer.css
+++ b/src/main/resources/static/css/mypage/myPageBookContainer.css
@@ -321,3 +321,15 @@ button {
   width: 50%;
   border-radius: 20px;
 }
+
+.book-container-modal-bg2 {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.4);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 150%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
