관리자 차트 페이지 차트 띄우기 완료 관리자 신고 페이지 쿼리문 작성

--- a/src/main/resources/static/css/administrator/admin_declaration.css
+++ b/src/main/resources/static/css/administrator/admin_declaration.css
@@ -525,3 +525,12 @@ main {
 .declaration-view-flex {
   display: flex;
 }
+
+.feed-can-not-see{
+  display: none;
+}
+
+.book-can-see{
+  display: none;
+}
+
